--- a/templates/data_cleaning.html
+++ b/templates/data_cleaning.html
@@ -7,13 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   </head>
   <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Gender Detector</a>
+            <a class="navbar-brand" href="/">Gender Detector</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,7 +24,7 @@
                   <a class="nav-link" href="https://github.com/positivelyalli/gender-detector">Github</a>
                 </li>
                 <li>
-                  <a class="nav-link active" href="data_cleaning.html">Data Cleaning & Modeling</a>
+                  <a class="nav-link active" href="/data_cleaning.html">Data Cleaning & Modeling</a>
                 </li>
                 <!-- <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="https://example.com" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Data Visualizations</a>
@@ -58,7 +58,7 @@
               <p>Is there a bias towards a certain gender in movie scripts? </br>The purpose of this project is to see if a machine learning algorithm can predict a character's gender from the words spoken by the character in the movie script.</p>              
               <h3>Creating the Machine Learning Model</h3>
               <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-              <img src="resources/images/confusionmatrix.PNG" class="img-fluid" alt="Responsive image">
+              <img src="static/images/confusionmatrix.PNG" class="img-fluid" alt="Responsive image">
               <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
               <ul>
                 <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
