--- a/templates/index.html
+++ b/templates/index.html
@@ -69,19 +69,53 @@
             <div class="blog-post">
               <h2 class="blog-post-title">Gender Detection & Prediction</h2>
               <p class="blog-post-meta">June 20, 2020 by <a href="#">Alli Kruger & Sowmya Srinivasan</a></p>
-              <p>Is there a bias towards a certain gender in movie scripts? </br>The purpose of this project is to see if a machine learning algorithm can predict a character's gender from the words spoken by the character in the movie script.</p>
-              <img src="static/images/allwordcloud.png" class="img-fluid" alt="Responsive image" >
+              <p>The purpose of this project is to see if a machine learning algorithm can predict a 
+                character's gender from the words spoken by the character in the movie scripts from the
+                <a href="https://www.kaggle.com/Cornell-University/movie-dialog-corpus">Kaggle movie script corpus dataset</a>. To learnmore about the process to 
+                create the prediction model <a href="http://127.0.0.1:5000/data_cleaning.html">go to the Data Cleaning & Modeling page</a>.  
+              </p>
+              <!-- <img src="static/images/allwordcloud.png" class="img-fluid" alt="Responsive image" style = "max-width: 85%; max-height: 85%;" > -->
+              <p></br></p>
               <h2>Gender Bias</h2>
-              <p>There is a bias in scripts towards male characters. There are almost twice as many male characters than female characters. However, there is not as big of a bias as we originally thought and we adjusted the training dataset so that there were an equal number of lines for female and male characters.</p>
+              <p>But, is there a bias towards a certain gender in the movie scripts?</p>
               <div id="charbar"></div>
-              <p>The male characters had 2.3 times more lines than a female character. A female character got to speak 2.3 times less than the male characters. Given that women are a little more than half the population movie scripts are not representing reality accurately. </p>
+              <p>    Yes, there are almost twice as many male characters than female characters. However,
+                there is not as big of a bias as we originally thought. Non-gendered characters outnumbered 
+                female characters as well.In order to normalize the data, the   
+                training dataset was adjusted so that the number of  lines for female and male
+                characters were equal. The kaggle movie corpus dataset was also adjusted by removing 
+                the non-gendered characters and lines before handing it off to the machine learning model.
+              </p>
               <div id="linesbar"></div>
+              <p>The male characters had 2.3 times more lines than a female character. A female character got to speak 
+                2.3 times less than the male characters. Given that women are a little more than half the population movie 
+                scripts are not representing reality accurately. One potential way to fix this difference is to make most 
+                of the non-gendered characters in a movie, such as extras, predominantly female.</p>
+              <p></br></p>
               <h3>Words spoken by each Gender</h3>
-              <p>The words spoken by each gender were not very different. The first round of word clouds contained mostly names and did not show anything of interest. This was improved by including character names in the stopwords that were removed later.</p>
-              <img src="static/images/femalecloud.png" class="img-fluid" alt="Female Word Cloud" style = "max-width: 70%; max-height: 70%;">
-              <p>The words that female characters say </p>
-              <img src="static/images/malecloud.png" class="img-fluid" alt="Female Word Cloud" style = "max-width: 70%; max-height: 70%;">
-              <p>The words that male characters say shows …TBD…</p>
+              <p></br></p>
+              <p>The words spoken by each gender were different but not as much as one would think. The first round of word clouds contained mostly names and did not show anything of interest. Removing character names with stopwords resolved the issue.</p>
+              <h5>Female Characters</h5>
+              <p></br></p>
+              <img src="static/images/femalecloud.png" class="img-fluid" alt="Female Word Cloud" style = "max-width: 85%; max-height: 85%;">
+              <p></br></p>
+              <p>Female characters shared a lot of the most frequently used words with male characters. The largest differences are “think”, “want”, “really”, and “oh.”  Female characters used “know”, “think”, “want” and “oh” more often than male characters. These words are predictors for gender in a movie script. This could be due to the more indirect or passive sentence structure that female characters use in the dataset.
+              </p>
+              <h5>Male Characters</h5>
+              <p></br></p>
+              <img src="static/images/malecloud.png" class="img-fluid" alt="Female Word Cloud" style = "max-width: 85%; max-height: 85%;">
+              <p></br></p>
+              <p>Male characters used more direct sentence structures and more profanity when speaking dialogue. The word cloud shows some of the obscenities that were used. The words “got”, “one”, “look” and “say” are used more often by male characters making them good predictors for male gender.
+              </p>
+              <!-- <h4>Word Cloud Process</h4>
+              <p></br></p>
+              <p>
+
+              </p> -->
+              <p>
+              </br>
+              </br>
+              Learn more about creating the prediction model <a href="http://127.0.0.1:5000/data_cleaning.html">here</a>.</p>
           </div>
       </main>
       
