added line under input box

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,8 @@
             </form>
             {% if message %}
             <p>
-              <h2 class = "predict_g"> It's a {{ message}}! </h2>
+              <h4 class = "predict_g"> Your phrase is: {{ txt }}</h4>
+              <h2 class = "predict_g"> We predict it's a {{ message}}! </h2>
             </p>
             {% endif %}
           </div>
@@ -71,7 +72,7 @@
               <p class="blog-post-meta">June 20, 2020 by <a href="#">Alli Kruger & Sowmya Srinivasan</a></p>
               <p>The purpose of this project is to see if a machine learning algorithm can predict a 
                 character's gender from the words spoken by the character in the movie scripts from the
-                <a href="https://www.kaggle.com/Cornell-University/movie-dialog-corpus">Kaggle movie script corpus dataset</a>. To learnmore about the process to 
+                <a href="https://www.kaggle.com/Cornell-University/movie-dialog-corpus">Kaggle movie script corpus dataset</a>. To learn more about the process to 
                 create the prediction model <a href="http://127.0.0.1:5000/data_cleaning.html">go to the Data Cleaning & Modeling page</a>.  
               </p>
               <!-- <img src="static/images/allwordcloud.png" class="img-fluid" alt="Responsive image" style = "max-width: 85%; max-height: 85%;" > -->
